Fix google font on safari

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -30,6 +30,8 @@ h1 {
 
 h2 {
     font-family: 'Lobster Two', cursive;
+    font-weight:900; 
+    font-style:italic;;
     border-bottom: 1px solid rgb(156, 155, 155);
     font-size: 28px;
 }
